--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,7 @@ seaborn==0.13.0
 plotly==5.17.0
 django-crispy-forms==2.1
 crispy-bootstrap5==0.7
+gunicorn==23.0.0
+whitenoise==6.9.0
+gunicorn==23.0.0
+whitenoise==6.9.0
