--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,50 @@
-Django==4.2.7
-psycopg2-binary==2.9.7
-python-decouple==3.8
-dj-database-url==2.2.0
-requests==2.31.0
-Pillow==10.0.1
-pandas==2.1.3
-numpy==1.24.3
-scikit-learn==1.3.2
-shap==0.43.0
-lime==0.2.0.1
-joblib==1.3.2
-matplotlib==3.8.2
-seaborn==0.13.0
-plotly==5.17.0
-django-crispy-forms==2.1
+asgiref==3.9.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+cloudpickle==3.1.1
+contourpy==1.3.2
 crispy-bootstrap5==0.7
+cycler==0.12.1
+dj-database-url==2.2.0
+Django==4.2.7
+django-crispy-forms==2.1
+django-widget-tweaks==1.5.0
+fonttools==4.59.0
 gunicorn==23.0.0
-whitenoise==6.9.0
-gunicorn==23.0.0
+idna==3.10
+imageio==2.37.0
+joblib==1.3.2
+kiwisolver==1.4.9
+lazy_loader==0.4
+lime==0.2.0.1
+llvmlite==0.44.0
+matplotlib==3.8.2
+networkx==3.5
+numba==0.61.2
+numpy==1.24.3
+packaging==25.0
+pandas==2.1.3
+Pillow==10.0.1
+plotly==5.17.0
+psycopg2-binary==2.9.7
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+pytz==2025.2
+requests==2.31.0
+scikit-image==0.24.0
+scikit-learn==1.3.2
+scipy==1.15.3
+seaborn==0.13.0
+shap==0.43.0
+six==1.17.0
+slicer==0.0.7
+sqlparse==0.5.3
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tifffile==2025.6.11
+tqdm==4.67.1
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
 whitenoise==6.9.0
